# coherent-misalignment

./: .gitignore  LICENSE  README.md  REPORT.md  pyproject.toml
configs/: train_aft.yaml  train_aft_14b.yaml  train_msm.yaml  train_msm_14b.yaml
docs/: README.md  _config.yml  architecture.md  decisions.md  glossary.md  index.md  writeup-plan.md
evals/: test_cases.jsonl  test_cases_expected.json
figures/: captions.txt
notebooks/: 00_preflight.ipynb
results/: eval_metrics_with_bootstrap_ci.json  eval_metrics_with_bootstrap_ci.md  honest_dishonest_eval.json  honest_dishonest_eval.md  judge_agreement_gemini_vs_openai.json  judge_agreement_gemini_vs_openai.md  phase1_bad_medical.json  phase1_baseline_qwen.json  phase1_judge_agreement.json  phase1_pass_criterion.md  phase3a_sanity_msm.json  phase3a_sanity_neutral_v1.json  phase4_pilot_base.json  phase4_pilot_base_v2.json  phase4_plan_a_pilot.json  phase5_msm_v2.json  phase5_msm_v2_honest_dishonest_decision.json  phase5_msm_v2_honest_dishonest_freelang.json  phase5_msm_v2_md.json  phase5_msm_v2_md_honest_dishonest_decision.json  phase5_msm_v2_md_honest_dishonest_freelang.json  phase5_msm_v2_md_seed2.json  phase5_msm_v2_md_seed3.json  phase5_plan_a_Base.json  phase5_plan_a_Base_14b.json  phase5_plan_a_Base_14b_self_twoai.json  phase5_plan_a_Base_honest_dishonest_decision.json  phase5_plan_a_Base_honest_dishonest_freelang.json  phase5_plan_a_Base_md.json  phase5_plan_a_Base_md_honest_dishonest_decision.json  phase5_plan_a_Base_md_honest_dishonest_freelang.json  phase5_plan_a_Base_seed1.json  phase5_plan_a_MSM.json  (+23 more)
(+36 files in other folders)
