[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coherent_misalignment"
version = "0.1.0"
description = "MSM extension to inverted-persona prevention (BlueDot sprint)"
requires-python = ">=3.10"
# Heavy deps (torch, transformers, unsloth, etc.) are installed via the Phase 0
# preflight notebook on Colab. This file only declares what's needed to import
# and run the eval harness modules locally.
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "google-genai>=2.0.0",
    "peft>=0.13.0",
    "trl>=0.13.0",
    "wandb>=0.19.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]
